<resources>
    <string name="account_id_and_passcode_is_required_for_clevertap">Account Id and Passcode is required for logging Clevertap Analytics</string>
    <string name="active_plan">Your active plan is</string>
    <string name="age">Your age</string>
    <string name="age_control">You are not allow to watch this video due to parental control</string>
    <string name="age_control_trailer">You are not allow to watch this trailer due to parental control</string>
    <string name="age_must_be_18">Your should be 16 or more than 16+</string>
    <string name="all_content_you_have_not_specifically_restricted_below_will_be_available">All content you have not specifically restricted below will be available.</string>
    <string name="allready_hv_an_account">Already have an account?</string>
    <string name="amount_with_rupee_symbol">₹%s</string>
    <string name="app_name">GPS SpeedoMeter</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="back_button_warning">"Please don't hit the back button until the action is complete."</string>
    <string name="banks_supported"> supported banks</string>
    <string name="boom">Boom</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this transaction?</string>
    <string name="card_content_descriptor">card</string>
    <string name="cast">Casts</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="confirm_password_require">Confirm password is required</string>
    <string name="contact_us">Contact us</string>
    <string name="continue_txt">Continue</string>
    <string name="confirm_content_msg">Please confirm that you are over 18 year or older to watch this content.!</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="control_what_you_can_watch">control what you can watch</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="do_you_really_want_to_cancel_the_transaction">Do you really want to cancel the transaction?</string>
    <string name="dont_hv_an_account">"Don't have an account?"</string>
    <string name="download">Download</string>
    <string name="dummy">Redirecting you to payment page.</string>
    <string name="easypay_submit">SUBMIT</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">Email address</string>
    <string name="email_add_require">Email address is required</string>
    <string name="email_format_require">Please enter email format</string>
    <string name="email_require">Age is required</string>
    <string name="enter_amount">₹. Enter amount</string>
    <string name="enter_correct_pass">Please enter same password</string>
    <string name="enter_one_time_password">Enter One Time Password (OTP)</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_send_to_num">Enter otp sent to</string>
    <string name="episode">Episodes</string>
    <string name="fast_and_secure">Fast &amp; Secure Payments</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="for_all_geners">For All Geners</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_your_password_">Forgot your password?</string>
    <string name="gener">Geners</string>
    <string name="general_viewing_suitable_for_all">General viewing, suitable for all.</string>
    <string name="get_started">Get Started</string>
    <string name="help">Help</string>
    <string name="help_us">Help us</string>
    <string name="hide">Hide</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_vpa">Enter your VPA</string>
    <string name="i_agree_with">I agree with</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="intent_sdk_name">PhonePeIntentSDK</string>
    <string name="internet_restored">Internet Restored</string>
    <string name="item_view_role_description">Tab</string>
    <string name="legal">Legal</string>
    <string name="like">Like</string>
    <string name="linktobankPagetext"><u>Complete the transaction on the bank page</u></string>
    <string name="load_again">Load again</string>
    <string name="login">Login</string>
    <string name="login_here">Login here</string>
    <string name="login_successfully">Successfully login</string>
    <string name="more_like_this">More Like This</string>
    <string name="movies">Movies</string>
    <string name="my_list">My List</string>
    <string name="my_plan">My plan</string>
    <string name="name_require">Name is required</string>
    <string name="native_please_do_not">"Please wait do not press 'Back' button"</string>
    <string name="new_credentials">New credentials</string>
    <string name="no_interest_charged">"No Interest Charged "</string>
    <string name="no_result_found">Results not found</string>
    <string name="no_upi_app_found_error">No UPI Payment App found!</string>
    <string name="number_correct">Number is correct! Send Otp</string>
    <string name="number_incorrect">Details Do not match</string>
    <string name="of_user">of %s</string>
    <string name="offer_applied_save_rs_on_this_order">Offer applied: Save Rs. %s on this order</string>
    <string name="ok">Ok</string>
    <string name="or">or </string>
    <string name="or_any_other_upi_app"> or any other UPI App</string>
    <string name="order_information">Order Information</string>
    <string name="other_options">Other Options</string>
    <string name="otp_could_not_detcted">OTP could not be detected</string>
    <string name="otp_detected">OTP Detected</string>
    <string name="otp_verification">OTP verification</string>
    <string name="parental_control">Parental control</string>
    <string name="parental_guidance_recommended">Parental guidance recommended</string>
    <string name="parental_lock_msg">You need to login password to control your parental lock system!</string>
    <string name="password">Password</string>
    <string name="password_require">Password is required</string>
    <string name="password_text">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="password_updated_success">Password updated</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay">Pay</string>
    <string name="pay_directly_from_google_pay">Pay directly from Google Pay</string>
    <string name="pay_directly_from_lazy_pay">Buy Now, Pay Later at your convenience</string>
    <string name="pay_directly_from_your_phonepe_account">Pay directly from your PhonePe account</string>
    <string name="pay_emi_amount">Pay ₹%1$s x %2$s mo. @ %3$s%% pa</string>
    <string name="pay_emi_amount_without_interest">Pay ₹%1$s x %2$s months</string>
    <string name="pay_merchant">Pay %s</string>
    <string name="pay_msg1">Unlimited Movies, Web Series and more!</string>
    <string name="pay_msg2">Watch Non-Stop without any ads, ever</string>
    <string name="pay_msg3">Download your favourite content and watch offline!</string>
    <string name="pay_msg4">Stream in quality according to your network data!</string>
    <string name="pay_msg5">Weekly updates of your favourite content!</string>
    <string name="pay_using_any_of">Pay using any of</string>
    <string name="pay_using_credit_card">Pay Using Credit card</string>
    <string name="pay_using_debit_card">Pay Using Debit card</string>
    <string name="pay_using_debit_card_or_credit_card">Pay using any credit or debit card</string>
    <string name="pay_using_paytm_wallet_or_upi">Pay using Paytm wallet or UPI</string>
    <string name="pay_via">Pay via</string>
    <string name="pay_with">Pay with</string>
    <string name="payment_selection">Payment selection</string>
    <string name="payu_100_secured_by">100% Secured by</string>
    <string name="payu_access_saved_options">Access Saved Options</string>
    <string name="payu_account_holder_name">"Account Holder's Name"</string>
    <string name="payu_account_holder_name_hint">ENTER NAME</string>
    <string name="payu_account_number">Account Number</string>
    <string name="payu_account_number_error">Account numbers do not match</string>
    <string name="payu_account_number_hint">ENTER ACCOUNT NUMBER</string>
    <string name="payu_account_number_min_length_error">Please enter at least 8 digit account number</string>
    <string name="payu_account_type">Account Type</string>
    <string name="payu_add_new_card">ADD NEW CARD</string>
    <string name="payu_add_new_card_small">New Card</string>
    <string name="payu_all_banks">All Banks</string>
    <string name="payu_all_wallets">All Wallets</string>
    <string name="payu_are_you_sure_you_want_to_delete_this_saved_option">Are you sure you want to delete this saved option?</string>
    <string name="payu_authentication_complete">Authentication complete</string>
    <string name="payu_auto_reading_otp">Auto - Reading OTP</string>
    <string name="payu_available_currencies">Available Currencies</string>
    <string name="payu_available_offers">Available Offers</string>
    <string name="payu_bank_account_number">%s Account Number</string>
    <string name="payu_bank_ifsc">Bank IFSC</string>
    <string name="payu_bankdown">Your Bank is currently down</string>
    <string name="payu_cancel">CANCEL</string>
    <string name="payu_cancel_payment">Cancel Payment</string>
    <string name="payu_card_expiry">Card Expiry</string>
    <string name="payu_card_not_supported_error">Card does not support standing instructions</string>
    <string name="payu_card_not_supported_for_emi_payments">This card is not supported for EMI Payments. Please try again.</string>
    <string name="payu_card_number">Card Number</string>
    <string name="payu_card_number_error">Please enter a valid card number</string>
    <string name="payu_card_si_not_supported_error">"This card doesn't support SI"</string>
    <string name="payu_cardless_emi_options">CARDLESS EMI OPTIONS</string>
    <string name="payu_cards_credit_debit">Cards (credit/debit)</string>
    <string name="payu_cart_detail">CART DETAIL</string>
    <string name="payu_cart_detail_amount">Recurring limit</string>
    <string name="payu_cart_detail_amount_breakup">AMOUNT BREAKUP</string>
    <string name="payu_cart_detail_end_date">End Date</string>
    <string name="payu_cart_detail_start_date">Start Date</string>
    <string name="register">Register</string>
    <string name="register_here">Register here</string>
    <string name="reset">Reset password</string>
    <string name="send_otp_msg">We just need your register email to send you password reset link</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="user_name">Your name</string>
    <string name="mobile_number">Mibile Number</string>
</resources>