<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:padding="@dimen/margin_8"
            android:src="@drawable/ic_baseline_arrow_back"
            android:tint="@color/white"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_10"
            android:gravity="center_vertical"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/margin_16" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_16">

            <ImageView
                android:layout_width="@dimen/margin_150"
                android:layout_height="@dimen/margin_150"
                android:layout_gravity="center"
                android:padding="@dimen/margin_8"
                android:src="@drawable/logo"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/forgot_your_password_"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_20" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/send_otp_msg"
                android:textAllCaps="false"
                android:textColor="@color/white" />

                      <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidthFocused="@dimen/margin_2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/ic_baseline_email"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/curved_white"
                android:backgroundTint="@color/main"
                android:paddingLeft="@dimen/margin_55"
                android:paddingRight="@dimen/margin_55"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
