<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView">

    </ProgressBar>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/margin_8"
                    android:src="@drawable/ic_baseline_arrow_back"
                    android:tint="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:text="@string/register_here"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_24" />
            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:gravity="center"
                android:elevation="10dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidthFocused="@dimen/margin_2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/ic_baseline_person_outline"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_age"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:hint="@string/age"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidthFocused="@dimen/margin_2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/ic_baseline_person_outline"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidthFocused="@dimen/margin_2"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                app:helperTextTextColor="@color/white"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/ic_baseline_email"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_40"
                    android:background="@drawable/border_white_round"
                    android:gravity="center"
                    app:ccpDialog_background="@color/black"
                    app:ccpDialog_textColor="@color/white"
                    app:ccp_arrowColor="@color/white"
                    app:ccp_contentColor="@color/white"
                    app:ccp_countryPreference="in,us"
                    app:ccp_showFlag="false"
                    app:ccp_showFullName="false"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_textSize="@dimen/margin_16" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight="1.0"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/main"
                    app:boxStrokeWidthFocused="@dimen/margin_2"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:helperTextTextColor="@color/white"
                    app:hintTextColor="@color/main"
                    app:startIconDrawable="@drawable/ic_baseline_smartphone"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:inputType="number"
                        android:textColor="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/main"
                app:boxStrokeWidthFocused="@dimen/margin_2"
                app:hintTextColor="@color/main"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                app:startIconDrawable="@drawable/ic_baseline_lock_open"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/termsLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_10">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="@dimen/margin_32"
                    android:layout_height="@dimen/margin_32"
                    android:buttonTint="@color/main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_2"
                    android:text="@string/i_agree_with"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_2"
                    android:text="@string/terms_and_condition"
                    android:textColor="@color/main"
                    android:textSize="@dimen/margin_16"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/curved_white"
                android:backgroundTint="@color/main"
                android:paddingLeft="@dimen/margin_40"
                android:paddingRight="@dimen/margin_40"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/loginLay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:layout_marginBottom="@dimen/margin_55"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_2"
                    android:text="@string/allready_hv_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_2"
                    android:text="@string/login_here"
                    android:textColor="@color/main"
                    android:textSize="@dimen/margin_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
